# agent-system

./: .gitignore  README.md  agent_config.yml  build_binary.sh  config.yml  install.sh  main.py  pyproject.toml  user_prompt.txt  workspace_tools_example.py
.github/workflows/: release.yml
agent/: __init__.py  config.py  core.py
agent_storage/: specialists.yml
cli/: __init__.py  app.py  config.py  init_cmd.py  run_cmd.py  theme.py  tui.py
cli/templates/: agent_config.yml  specialists.yml  storage_gitignore
coordinator/: __init__.py  config.py  config.yml  core.py  git_worktree.py  judge.py  researcher.py
storage/: __init__.py  memory_store.py  schema.py
tools/: __init__.py  context_tools.py  file_tools.py  memory_tools.py  permission_tools.py  shell_tools.py  web_tools.py
