[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.4.0",
    "lancedb>=0.13.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.3",
]
