[project]
name = "agentx"
version = "0.1.0"
description = "Multi-agent AI system — local Ollama models, web research, RAG memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core agent stack
    "deepagents>=0.6.12",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.4.0",
    # Storage
    "lancedb>=0.13.0",
    "pandas>=2.0.0",
    # Config
    "pyyaml>=6.0.3",
    # PDF parsing
    "pypdf>=6.14.2",
    "pdfminer-six>=20260107",
    # CLI interface
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.80.0",
]

[project.scripts]
agentx = "cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "agent", "coordinator", "storage", "tools"]

[tool.hatch.build.targets.wheel.shared-data]
"cli/templates" = "agentx/templates"
